<resources>
    <string name="app_name">MoviezLog</string>
    <string name="addmovie">Add Movie</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="movie_year">Movie Year</string>
    <string name="interstelar">Interstellar</string>
    <string name="actors">Matthew McConaughey</string>
    <string name="shortDescription">A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival.</string>
    <string name="imbdLink">https://www.imdb.com/title/tt0816692/?ref_=nv_sr_1</string>
    <string name="genere">Sci-Fi</string>
    <string name="GoogleAccount">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>


</resources>
