<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvGoogleAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/GoogleAccount"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/llUserNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivUserIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/user" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPassWordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivPasswordIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/pass" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Remember me"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
